# PitchTrainer

./: CMakeLists.txt  Readme.md  main.cpp
include/: Game.hpp  Keypad.hpp  Note.hpp
src/: CMakeLists.txt  Game.cpp  Keypad.cpp  Note.cpp  main.cpp
